@@ -1,2 +1,2 @@
 prog: wrapmalloc
-
+vgopts: -q
